--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -53,7 +53,7 @@ the observations in the test set? One way we can do this is to calculate the
 classifier made the correct prediction. To calculate this we divide the number
 of correct predictions by the number of predictions made. 
 
-$$prediction \; accuracy = \frac{number \; of  \; correct  \; predictions}{total \;  number \;  of  \; predictions}$$
+$$\mathrm{prediction \; accuracy} = \frac{\mathrm{number \; of  \; correct  \; predictions}}{\mathrm{total \;  number \;  of  \; predictions}}$$
 
 
 The process for assessing if our predictions match the true labels in the 
@@ -73,7 +73,7 @@ We start by loading the necessary packages, reading in the breast cancer data
 from the previous chapter, and making a quick scatter plot visualization of
 tumor cell concavity versus smoothness colored by diagnosis in Figure \@ref(fig:06-precode).
 
-```{r 06-precode, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of tumor cell concavity versus smoothness coloured by diagnosis label", message = F, warning = F}
+```{r 06-precode, fig.height = 4, fig.width = 5, fig.cap="Scatter plot of tumor cell concavity versus smoothness coloured by diagnosis label", message = F, warning = F}
 # load packages
 library(tidyverse)
 library(tidymodels)
@@ -180,7 +180,7 @@ our test data does not influence any aspect of our model training. Once we have
 created the standardization preprocessor, we can then apply it separately to both the
 training and test data sets.
 
-Fortunately, the `recipe` framework from `tidymodels` makes it simple to handle
+Fortunately, the `recipe` framework from `tidymodels` helps us handle
 this properly. Below we construct and prepare the recipe using only the training
 data (due to `data = cancer_train` in the first line).
 
@@ -218,7 +218,7 @@ knn_fit
 > if there is a tie for the majority neighbor class, the winner is randomly selected. Although there is no chance
 > of a tie when $K$ is odd (here $K=3$), it is possible that the code may be changed in the future to have an even value of $K$. 
 > Thus, to prevent potential issues with reproducibility, we have set the seed. Note that in your own code,
-> you only have to set the seed once at the beginning of your analysis. 
+> you should have to set the seed once at the beginning of your analysis. 
 
 ### Predict the labels in the test set
 
@@ -591,7 +591,6 @@ variable that contains the sequence of values of $K$ to try; below we create the
 data frame with the `neighbors` variable containing each value from $K=1$ to $K=15$ using 
 the `seq` function.
 Then we pass that data frame to the `grid` argument of `tune_grid`.
-We set the seed prior to tuning to ensure results are reproducible:
 ```{r 06-range-cross-val-2}
 set.seed(1)
 k_vals <- tibble(neighbors = seq(from = 1, to = 15, by = 1))
@@ -946,7 +945,7 @@ is less obvious, as all seem like reasonable candidates. It
 is not clear which subset of them will create the best classifier. One could use visualizations and
 other exploratory analyses to try to help understand which variables are potentially relevant, but
 this process is both time-consuming and error-prone when there are many variables to consider.
-We therefore, need a more systematic and programmatic way of choosing variables. 
+Therefore we need a more systematic and programmatic way of choosing variables. 
 This is a very difficult problem to solve in
 general, and there are a number of methods that have been developed that apply
 in particular cases of interest. Here we will discuss two basic
