added index to viz; fixed error in viz

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -22,7 +22,7 @@ By the end of the chapter, readers will be able to:
 
 ## Canadian languages data set
 
-In this chapter, \index{Canadian languages!overview} we will walk through a full analysis of a data set relating to
+In this chapter, \index{Canadian languages} we will walk through a full analysis of a data set relating to
 languages spoken at home by Canadians. Many Indigenous peoples exist in Canada 
 with their own cultures and languages; these languages are often unique to Canada and not spoken
 anywhere else in the world [@statcan2018mothertongue]. Sadly, colonization has
@@ -38,7 +38,7 @@ To learn more, please see Canadian Geographic's article on
 and the Truth and Reconciliation Commission of 
 Canada's [Calls to Action](http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf) [@calls2015].
 
-The data set we will study in this chapter is taken from \index{Canadian languages!canlang data}
+The data set we will study in this chapter is taken from 
 [the {canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has
 population language data collected during the 2016 Canadian census [@cancensus2016]. 
 In this data there are 214 languages recorded, each having 6 different properties:
@@ -76,7 +76,7 @@ descriptive, exploratory, inferential, predictive, causal, and mechanistic,
 all of which are defined in Table \@ref(tab:questions-table).
 Carefully formulating a question as early as possible in your analysis&mdash;and 
 correctly identifying which type of question it is&mdash;will guide your overall approach to 
-the analysis as well as the selection of appropriate tools.\index{question!types and definitions}
+the analysis as well as the selection of appropriate tools.\index{question!data analysis}
 \index{descriptive!definition}
 \index{exploratory!definition}
 \index{predictive!definition}
@@ -456,7 +456,7 @@ book: many of the functions from `tidyverse` require tidy data, including the
 `ggplot` \index{ggplot} function that we will use shortly for our visualization. We will
 formally introduce tidy data in Chapter \@ref(wrangling).
 
-We will make a bar plot to visualize our data. A bar plot \index{plot!bar} is a chart where the
+We will make a bar plot to visualize our data. A bar plot \index{plot|see{visualization}}\index{visualization|see{ggplot}}\index{visualization!bar} is a chart where the
 heights of the bars represent certain values, like counts or proportions. We
 will make a bar plot using the `mother_tongue` and `language` columns from our
 `ten_lang` data frame. To create a bar plot of these two variables using the 
