--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -20,7 +20,7 @@ to track changes to a project over its lifespan, to share
 and edit code in a collaborative team, 
 and to distribute the finished project to its intended audience.
 This chapter will also introduce how to use 
-the two most common version control tools: Git \index{Git} for local version control, 
+the two most common version control tools: Git \index{git} for local version control, 
 and GitHub \index{GitHub} for remote version control. 
 We will focus on the most common version control operations 
 used day-to-day in a standard data science project. 
