Added index entries to jupyter

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -34,12 +34,12 @@ By the end of the chapter, readers will be able to:
 ## Jupyter
 
 Jupyter is a web-based interactive development environment for creating, editing 
-and executing documents called Jupyter notebooks. Jupyter notebooks are 
+and executing documents called Jupyter notebooks. Jupyter notebooks \index{Jupyter notebook} are 
 documents that contain a mix of computer code (and its output) and formattable 
 text. Given that they combine these two analysis artifacts in a single 
 document&mdash;code is not separate from the output or written report&mdash;notebooks are 
 one of the leading tools to create reproducible data analyses. Reproducible data 
-analysis is one where you can reliably and easily recreate the same results when 
+analysis \index{reproducible} is one where you can reliably and easily recreate the same results when 
 analyzing the same data. Although this sounds like something that should always 
 be true of any data analysis, in reality, this is not often the case; one needs 
 to make a conscious effort to perform data analysis in a reproducible manner.
@@ -53,7 +53,7 @@ knitr::include_graphics("img/jupyter.png")
 ### Accessing Jupyter
 
 One of the easiest ways to start working with Jupyter is to use a 
-web-based platform called JupyterHub. JupyterHubs often have Jupyter, R, a number of R 
+web-based platform called \index{JupyterHub} JupyterHub. JupyterHubs often have Jupyter, R, a number of R 
 packages, and collaboration tools installed, configured and ready to use. 
 JupyterHubs are usually created and provisioned by organizations,
 and require authentication to gain access. For example, if you are reading
@@ -66,7 +66,7 @@ own computer; see Chapter \@ref(move-to-your-own-machine) for instructions.
 ## Code cells
 
 The sections of a Jupyter notebook that contain code are referred to as code cells. 
-A code cell that has not yet been 
+A code cell \index{Jupyter notebook!code cell} that has not yet been 
 executed has no number inside the square brackets to the left of the cell 
 (Figure \@ref(fig:code-cell-not-run)). Running a code cell will execute all of 
 the code it contains, and the output (if any exists) will be displayed directly
@@ -89,7 +89,7 @@ image_read("img/code-cell-run.png") |>
 
 ### Executing code cells
 
-Code cells can be run independently or as part of executing the entire notebook 
+Code cells \index{Jupyter notebook!cell execution} can be run independently or as part of executing the entire notebook 
 using one of the "**Run all**" commands found in the **Run** or **Kernel** menus 
 in Jupyter. Running a single code cell independently is a workflow typically 
 used when editing or writing your own R code. Executing an entire notebook is a 
@@ -132,7 +132,7 @@ image_read("img/restart-kernel-run-all.png") |>
 ```
 
 ### The Kernel
-The kernel is a program that executes the code inside your notebook and 
+The kernel \index{kernel}\index{Jupyter notebook!kernel|see{kernel}} is a program that executes the code inside your notebook and 
 outputs the results. Kernels for many different programming languages have 
 been created for Jupyter, which means that Jupyter can interpret and execute 
 the code of many different programming languages. To run R code, your notebook 
@@ -141,7 +141,7 @@ that indicates the status of your kernel. If the circle is empty (⚪),
 the kernel is idle and ready to execute code. If the circle is filled in (⚫), 
 the kernel is busy running some code.
 
-You may run into problems where your kernel is stuck for an excessive amount 
+You may run into problems where your kernel \index{kernel!interrupt,restart} is stuck for an excessive amount 
 of time, your notebook is very slow and unresponsive, or your kernel loses its
 connection. If this happens, try the following steps:
 
@@ -163,7 +163,7 @@ image_read("img/create-new-code-cell.png") |>
 
 ## Markdown cells
 
-Text cells inside a Jupyter notebook are called Markdown cells. Markdown cells 
+Text cells inside a Jupyter notebook are \index{markdown} \index{Jupyter notebook!markdown cell} called Markdown cells. Markdown cells 
 are rich formatted text cells, which means you can **bold** and *italicize* 
 text, create subject headers, create bullet and numbered lists, and more. These cells are 
 given the name "Markdown" because they use *Markdown language* to specify the rich text formatting.
@@ -230,7 +230,7 @@ order (from top to bottom of the notebook). A nonlinear notebook is problematic
 because a linear order is the conventional way code documents are run, and 
 others will have this expectation when running your notebook. Finally, if the 
 code is used in some automated process, it will need to run in a linear order, 
-from top to bottom of the notebook.
+from top to bottom of the notebook. \index{Jupyter notebook!best practices}
 
 The most common way to inadvertently create a nonlinear notebook is to rely solely 
 on using the ▶ button to execute cells. For example, 
@@ -355,7 +355,7 @@ image_read("img/open_data_w_editor_02.png") |>
 ## Exporting to a different file format 
 
 In Jupyter, viewing, editing and running R code is done in the Jupyter notebook 
-file format with file extension `.ipynb`. This file format is not easy to open and 
+file format with \index{Jupyter notebook!export} file extension `.ipynb`. This file format is not easy to open and 
 view outside of Jupyter. Thus, to share your analysis with people who do not 
 commonly use Jupyter, it is recommended that you export your executed analysis 
 as a more common file type, such as an `.html` file, or a `.pdf`. We recommend 
